--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "date-fns": "^2.22.1",
     "formik": "^2.2.9",
     "react": "^17.0.2",
+    "react-calendar": "^3.4.0",
     "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.0.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.1.2",
