--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "cuid": "^2.1.8",
     "date-fns": "^2.22.1",
     "firebase": "^8.6.5",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-calendar": "^3.4.0",
+    "react-cropper": "^1.3.0",
     "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.2",
     "react-hot-toast": "^2.0.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
