--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
+    "simple-peer": "^9.11.0",
+    "socket.io-client": "^4.1.2",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
   },
