--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "date-fns": "^2.22.1",
     "firebase": "^8.6.5",
     "formik": "^2.2.9",
+    "fuse.js": "^6.4.6",
     "react": "^17.0.2",
     "react-calendar": "^3.4.0",
     "react-cropper": "^1.3.0",
@@ -27,6 +28,7 @@
     "simple-peer": "^9.11.0",
     "socket.io-client": "^4.1.2",
     "web-vitals": "^1.1.2",
+    "webrtc-adapter": "^8.0.0",
     "yup": "^0.32.9"
   },
   "scripts": {
