--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
+    "react-hls-player": "^3.0.7",
     "react-hot-toast": "^2.0.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
